Add versions for 1.20-1.20.6